Primer borrador con los bloques de contenido

--- a/mtextos/notebooks.ipynb
+++ b/mtextos/notebooks.ipynb
@@ -18,15 +18,16 @@
     "You an also $add_{math}$ and\n",
     "\n",
     "$$\n",
-    "math^{blocks}\n",
+    "math^{blocks} \\int_0^\\infty x \\, dx\n",
     "$$\n",
     "\n",
     "or\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "\\mbox{mean} la_{tex} \\\\ \\\\\n",
-    "math blocks\n",
+    "\\mbox{mean} la_{tex} \\\\\n",
+    "math blocks \\\\\n",
+    "\\int_0^\\infty x \\, dx \n",
     "\\end{aligned}\n",
     "$$\n",
     "\n",
@@ -88,6 +89,44 @@
    "source": [
     "There is a lot more that you can do with outputs (such as including interactive outputs)\n",
     "with your book. For more information about this, see [the Jupyter Book documentation](https://jupyterbook.org)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def black_box_func(x):\n",
+    "    return x**3+30\n",
+    "\n",
+    "def true_gradient_func(x):\n",
+    "    return 3*x**2\n",
+    "\n",
+    "\n",
+    "def plot_gradients(nsteps,title):\n",
+    "    xi = np.linspace(-5,5,nsteps)\n",
+    "    yi = black_box_func(xi)\n",
+    "\n",
+    "    approx_gradient = np.gradient(yi,xi)\n",
+    "    true_gradient   = true_gradient_func(xi)\n",
+    "\n",
+    "    plt.plot(xi,yi, label = 'black-box func')\n",
+    "    plt.scatter(xi,yi)\n",
+    "\n",
+    "    plt.plot(xi,approx_gradient, label = 'finite diff grad')\n",
+    "    plt.scatter(xi,approx_gradient)\n",
+    "\n",
+    "    plt.plot(xi,true_gradient, label = 'true grad')\n",
+    "    plt.scatter(xi,true_gradient)\n",
+    "\n",
+    "    plt.legend()\n",
+    "    plt.title(title)\n",
+    "    plt.show()\n",
+    "    \n",
+    "    \n",
+    "plot_gradients(11, title = 'it is pretty bad if Δx is too large')\n",
+    "plot_gradients(41, title = 'it gets better at the cost of many evaluations') "
    ]
   }
  ],
